<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">
    
    <EditText android:id="@+id/username"
        	  android:layout_width="match_parent"
        	  android:layout_height="wrap_content"
        	  android:hint="@string/username"
        	  android:layout_gravity="center"/>
    
    <EditText android:id="@+id/password"
        	  android:layout_width="match_parent"
        	  android:layout_height="wrap_content"
        	  android:inputType="textPassword"
        	  android:layout_marginTop="8dp"
        	  android:hint="@string/password"
        	  android:layout_gravity="center"/>
    
    <LinearLayout android:layout_width="fill_parent"
    			  android:layout_height="wrap_content"
    			  android:layout_marginTop="5dp"
    			  android:layout_marginLeft="5dp"
    			  android:layout_marginRight="5dp"
    			  android:orientation="horizontal" >
    			  
    	<ImageView android:id="@+id/verifipic"
    	    	   android:visibility="gone"
    	    	   android:contentDescription="@string/vericodedescription"
    	    	   android:layout_weight="1"
    	    	   android:layout_width="fill_parent"
    	    	   android:layout_height="wrap_content"
    	    	   android:clickable="true"/>
    	
    	<ProgressBar 
    	    		 android:layout_height="wrap_content"
    	    		 android:layout_width="fill_parent"
    	    		 android:layout_weight="1"
    	    		 android:visibility="visible"
    	    		 android:id="@+id/progressBar"
    	    		 style="?android:attr/progressBarStyle"/>
    	
        <EditText android:id="@+id/verificode"
        	  android:layout_width="fill_parent"
        	  android:layout_weight="1"
        	  android:layout_height="wrap_content"
        	  android:inputType="text"
        	  android:enabled="false"/>
    </LinearLayout>
    			  
    <Button   
          android:id="@+id/loginbutton"
          android:layout_width="wrap_content"
          android:minWidth="90dp"
          android:layout_marginTop="15dp"
    	  android:layout_height="wrap_content"
    	  android:text="@string/button_login"/>
    
    <TextView 
        android:id="@+id/loginmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        />

    <RelativeLayout android:layout_width="match_parent"
        			android:layout_height="match_parent"
        			android:layout_gravity="center">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/statement" />

    </RelativeLayout>
    
</LinearLayout>
